# slint-cpp-nix-demo

./: CMakeLists.txt  flake.nix  main.cpp
nix/demo/: default.nix
nix/nixpkgs/: config.nix
